UI Refinements & Final Audit: - Migrated holding management into CardPortfolioTab with SearchableSelect - Cleaned legacy holding states and dead code from SettingsTab - Fixed DashboardTab net worth parser matching AI JSON schema - Implemented Glassmorphism UI enhancements and Setup Wizard animations - Updated .gitignore to secure local AI environments and keys

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,9 @@ ios/App/App/capacitor.config.json
 .env.local
 ios/App/App/GoogleService-Info.plist
 .claude/
+.gemini/
+*.key
+*.pem
 
 # ── Logs ──
 *.log
